--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
     </script>
 </head>
 
-<body>
-    <div id="shell" style="background-color: #171931"></div>
+<body style="background-color: #171931">
+    <div id="shell"></div>
 </body>
 
 </html>
